react rendering through lambda
